# 2clickmail

./: .gitignore  Cargo.toml  README.md  TODO.md  fly.toml  requests.txt
requests/: .gitignore  cleanup.sh
requests/auth/: login.sh  register.sh
requests/email/: create.sh  get.sh  send.sh
requests/profile/: get.sh
rust-server/twoclickmail-server/: .env  .gitignore  Cargo.toml  Dockerfile  fly.toml
rust-server/twoclickmail-server/src/: main.rs
server/: .gitignore  Cargo.toml  Dockerfile  Types.py  fly.toml  requirements.txt  server.py  utils.py
server/src/: auth.rs  lib.rs  main.rs
server/src/models/: email.rs  mod.rs  profile.rs  user.rs
server/src/routes/: email.rs  login.rs  mod.rs  profile.rs  register.rs
twoclickmail/: next.config.js  package-lock.json  package.json
twoclickmail/api/og/email/: route.tsx
twoclickmail/src/: theme.ts
twoclickmail/src/components/: Footer.tsx  MailChip.tsx  ShareButton.tsx  layout.tsx  navbar.tsx
twoclickmail/src/lib/: common.ts  types.ts
twoclickmail/src/lib/requests/: auth.ts  data.ts
twoclickmail/src/lib/utils/: auth.ts
twoclickmail/src/pages/: _app.tsx  about.tsx  email.tsx  generate.tsx  index.tsx  login.tsx  profile.tsx  register.tsx
twoclickmail/src/pages/api/og/: email.tsx
twoclickmail/src/pages/email/: [[...value]].tsx
twoclickmail/src/styles/: globals.css
