[package]
name = "twoclickmail"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.3"
axum-macros = "0.3"
hyper = "0.14"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
jsonwebtoken = "8.3.0"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
futures-util = "0.3"

[[bin]]
name = "twoclickmail"
path = "src/main.rs"
